--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
-  background: #f9f9f9;
+  background: #e6e6e6;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -39,11 +39,11 @@ div {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #2867a7;
+  background: #0F3B70;
 }
 
 ::-webkit-scrollbar-track {
-  background: #5fcfdc;
+  background: #e7e7e7;
 }
 
 .noJs {
